--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
             <path d=&quot;M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z&quot;/>
             </svg>" placeholder="Placeholder" hasFeedback>
         </sgds-input>
-          <!--<sgds-quantity-toggle min="3"  hasFeedback  hinttext="type hello"></sgds-quantity-toggle> -->
+          <sgds-quantity-toggle name="quant" min="3"  hasFeedback  hinttext="type hello"></sgds-quantity-toggle>
         <sgds-checkbox-group hasFeedback hintText="hint for checkbox" >
         <sgds-checkbox slot="checkbox" name="he" value="checkboxhello" required>he</sgds-checkbox>
       </sgds-checkbox-group>
-        <sgds-radio-group required hasFeedback>
+        <sgds-radio-group required hasFeedback name="hey">
           <sgds-radio value="1">1</sgds-radio>
           <sgds-radio value="2">2 </sgds-radio>
         </sgds-radio-group>
@@ -142,9 +142,9 @@
         const testF = document.querySelector( "#datepicker-form" );
         testF.addEventListener( "submit", event => {
             console.log( "stpru" );
-            // event.preventDefault();
+            event.preventDefault(); 
             const formData = new FormData( event.target );
-            console.log(formData.get("he"))
+            console.log(formData.get("hey"))
         } );
         const sgdsInput = document.querySelector("sgds-input")
         console.log(sgdsInput)
