docs(button, alert): add exmaples to storybook

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 
     <main>
         <div class="container">
+            <sgds-badge show><h2>hello</h2></sgds-badge>
             <h2>Ordered / Unordered List</h2>
             <div class="d-flex-row">
                 <ol>
@@ -702,8 +703,10 @@
                 <div class="row">
                     <div>
                         <sgds-badge variant="info">
-                            Testing
-
+                            <h2>
+                                Testing
+                            </h2>
+                        
                         </sgds-badge>
                         <sgds-badge variant="info" outlined>
                             Testing
