feat(css): only expose tag styles

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 <sgds-icon-button size="sm"></sgds-icon-button>
                 <sgds-icon-button size="lg"></sgds-icon-button>
             </div>
-
+            <a href="#">light dom anchor</a>
             <sgds-link href="https://google.com">Default</sgds-link>
             <sgds-link href="https://google.com" target="_blank">Default</sgds-link>
             <sgds-link href="https://google.com" disabled>Default (disabled)</sgds-link>
