test(validation): input checkbox and fix qtytoggle test

--- a/index.html
+++ b/index.html
@@ -120,21 +120,23 @@
   <body class="d-flex flex-column min-vh-100">
 
     <form id="datepicker-form">
-        <input pattern="hello" name="test"  />
-       <sgds-input label="Label" hinttext="type hello" name="email"  required pattern="hello"  hasFeedback="both"
+        <input name="test" checked type="checkbox" indeterminate />
+       <!-- <sgds-input label="Label" hinttext="type hello" name="email"  required  pattern="hello"  hasFeedback="both" 
             icon="<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; fill=&quot;currentColor&quot; class=&quot;bi bi-envelope&quot; viewBox=&quot;0 0 16 16&quot;>
             <path d=&quot;M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z&quot;/>
             </svg>" placeholder="Placeholder">
-        </sgds-input>
+        </sgds-input> -->
           <sgds-quantity-toggle  name="quant" min="3"   hinttext="type hello" hasFeedback="both" ></sgds-quantity-toggle>
-        <sgds-checkbox-group hasFeedback hintText="hint for checkbox" >
-        <sgds-checkbox slot="checkbox" name="checkbox" value="checkboxhello" required >he</sgds-checkbox>
+        <sgds-checkbox-group hasFeedback hintText="hint for checkbox" > 
+        <sgds-checkbox  slot="checkbox" name="checkbox" value="checkboxhello" required >he</sgds-checkbox>
       </sgds-checkbox-group>
-        <sgds-radio-group required hasFeedback name="radio">
+
+        <!-- <sgds-radio-group required hasFeedback name="radio">
           <sgds-radio value="1">1</sgds-radio>
           <sgds-radio value="2">2 </sgds-radio>
         </sgds-radio-group>
-        <sgds-button type="submit">Submit</sgds-button>
+        <sgds-textarea required></sgds-textarea> -->
+        <sgds-button type="submit" id="submit">Submit</sgds-button>
         <button type="reset">Reset</button>
     </form>
 
@@ -146,13 +148,18 @@
     <script>
           
         const testF = document.querySelector( "#datepicker-form" );
+  
         testF.addEventListener( "submit", event => {
             console.log( "stpru" );
-            // event.preventDefault(); 
+            event.preventDefault(); 
             const formData = new FormData( event.target );
-            console.log(formData.get("quant"), "qaunt value")
+            console.log(formData.get("checkbox"), "qaunt value")
+            console.log('form report', event.target.reportValidity())
         } );
-
+        const button = document.querySelector("#submit")
+        button.addEventListener('click', (e) => {
+          console.log('form report', testF.reportValidity())
+        })
         testF.addEventListener("reset", event => {
           console.log('reset click')
 
