--- a/index.html
+++ b/index.html
@@ -1241,136 +1241,76 @@
                 <div class="row">
                     <div class="container col is-6">
 
-                        <sgds-alert variant="info" show="" dismissible title="Title">
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24" fill="none">
-                                <path
-                                    d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM16.5341 8.59088C16.2046 8.26137 15.6704 8.26137 15.3409 8.59088C15.3329 8.59884 15.3254 8.60726 15.3185 8.61612L11.4121 13.5938L9.05686 11.2386C8.72736 10.9091 8.19312 10.9091 7.86362 11.2386C7.53411 11.5681 7.53411 12.1024 7.86362 12.4319L10.8409 15.4091C11.1704 15.7386 11.7046 15.7386 12.0341 15.4091C12.0415 15.4018 12.0484 15.394 12.0549 15.3859L16.5461 9.77191C16.8636 9.44154 16.8596 8.91634 16.5341 8.59088Z"
-                                    fill="white" />
-                            </svg>
+                        <sgds-alert variant="info" show dismissible title="Title" iconName="check-circle-fill" iconSize="lg">
                             <span>
                                 This is a success alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it
                                 a click if you like. You may add the dismissible option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="info" show="" title="Title" dismissible>
+                        <sgds-alert variant="info" show title="Title" dismissible>
                             <span>
                                 This is a success alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it
                                 a click if you like. You may add the dismissible option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="success" show="" dismissible>
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24" fill="none">
-                                <path
-                                    d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM16.5341 8.59088C16.2046 8.26137 15.6704 8.26137 15.3409 8.59088C15.3329 8.59884 15.3254 8.60726 15.3185 8.61612L11.4121 13.5938L9.05686 11.2386C8.72736 10.9091 8.19312 10.9091 7.86362 11.2386C7.53411 11.5681 7.53411 12.1024 7.86362 12.4319L10.8409 15.4091C11.1704 15.7386 11.7046 15.7386 12.0341 15.4091C12.0415 15.4018 12.0484 15.394 12.0549 15.3859L16.5461 9.77191C16.8636 9.44154 16.8596 8.91634 16.5341 8.59088Z"
-                                    fill="white" />
-                            </svg>
+                        <sgds-alert variant="success" show dismissible iconName="check-circle-fill" iconSize="lg">
                             <span>
                                 This is a info alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a
                                 click if you like. You may add the dismissible option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="danger" show="" dismissible>
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24" fill="none">
-                                <path
-                                    d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM16.5341 8.59088C16.2046 8.26137 15.6704 8.26137 15.3409 8.59088C15.3329 8.59884 15.3254 8.60726 15.3185 8.61612L11.4121 13.5938L9.05686 11.2386C8.72736 10.9091 8.19312 10.9091 7.86362 11.2386C7.53411 11.5681 7.53411 12.1024 7.86362 12.4319L10.8409 15.4091C11.1704 15.7386 11.7046 15.7386 12.0341 15.4091C12.0415 15.4018 12.0484 15.394 12.0549 15.3859L16.5461 9.77191C16.8636 9.44154 16.8596 8.91634 16.5341 8.59088Z"
-                                    fill="white" />
-                            </svg>
+                        <sgds-alert variant="danger" show dismissible iconName="check-circle-fill" iconSize="lg">
                             <span>
                                 This is an outline warning alert with <sgds-alert-link>an example
                                     link</sgds-alert-link>. Give it a click if you like. You may add the dismissible
                                 option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="warning" show="" dismissible>
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24" fill="none">
-                                <path
-                                    d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM16.5341 8.59088C16.2046 8.26137 15.6704 8.26137 15.3409 8.59088C15.3329 8.59884 15.3254 8.60726 15.3185 8.61612L11.4121 13.5938L9.05686 11.2386C8.72736 10.9091 8.19312 10.9091 7.86362 11.2386C7.53411 11.5681 7.53411 12.1024 7.86362 12.4319L10.8409 15.4091C11.1704 15.7386 11.7046 15.7386 12.0341 15.4091C12.0415 15.4018 12.0484 15.394 12.0549 15.3859L16.5461 9.77191C16.8636 9.44154 16.8596 8.91634 16.5341 8.59088Z"
-                                    fill="white" />
-                            </svg>
+                        <sgds-alert variant="warning" show dismissible iconName="check-circle-fill" iconSize="lg">
                             <span>
                                 This is an outline danger alert with <sgds-alert-link>an example link</sgds-alert-link>.
                                 Give it a click if you like. You may add the dismissible option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="neutral" show="" dismissible>
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24" fill="none">
-                                <path
-                                    d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM16.5341 8.59088C16.2046 8.26137 15.6704 8.26137 15.3409 8.59088C15.3329 8.59884 15.3254 8.60726 15.3185 8.61612L11.4121 13.5938L9.05686 11.2386C8.72736 10.9091 8.19312 10.9091 7.86362 11.2386C7.53411 11.5681 7.53411 12.1024 7.86362 12.4319L10.8409 15.4091C11.1704 15.7386 11.7046 15.7386 12.0341 15.4091C12.0415 15.4018 12.0484 15.394 12.0549 15.3859L16.5461 9.77191C16.8636 9.44154 16.8596 8.91634 16.5341 8.59088Z"
-                                    fill="white" />
-                            </svg>
+                        <sgds-alert variant="neutral" show dismissible iconName="check-circle-fill" iconSize="lg">
                             <span>
                                 This is an outline success alert with <sgds-alert-link>an example
                                     link</sgds-alert-link>. Give it a click if you like. You may add the dismissible
                                 option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="info" show="" outlined dismissible>
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24" fill="none">
-                                <path
-                                    d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM12 7.5C11.3977 7.5 10.927 8.02007 10.9869 8.61942L11.3815 12.5653C11.4133 12.883 11.6807 13.125 12 13.125C12.3193 13.125 12.5867 12.883 12.6185 12.5653L13.0131 8.61942C13.073 8.02007 12.6023 7.5 12 7.5ZM12.0017 14.25C11.3804 14.25 10.8767 14.7537 10.8767 15.375C10.8767 15.9963 11.3804 16.5 12.0017 16.5C12.6231 16.5 13.1267 15.9963 13.1267 15.375C13.1267 14.7537 12.6231 14.25 12.0017 14.25Z"
-                                    fill="#252525" />
-                            </svg>
+                        <sgds-alert variant="info" show outlined dismissible iconName="exclamation-circle-fill" iconSize="lg">
                             <span>
                                 This is a success alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it
                                 a click if you like. You may add the dismissible option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="info" show="" outlined dismissible>
+                        <sgds-alert variant="info" show outlined dismissible>
                             <span>
                                 This is a success alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it
                                 a click if you like. You may add the dismissible option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="success" show="" outlined dismissible>
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24" fill="none">
-                                <path
-                                    d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM12 7.5C11.3977 7.5 10.927 8.02007 10.9869 8.61942L11.3815 12.5653C11.4133 12.883 11.6807 13.125 12 13.125C12.3193 13.125 12.5867 12.883 12.6185 12.5653L13.0131 8.61942C13.073 8.02007 12.6023 7.5 12 7.5ZM12.0017 14.25C11.3804 14.25 10.8767 14.7537 10.8767 15.375C10.8767 15.9963 11.3804 16.5 12.0017 16.5C12.6231 16.5 13.1267 15.9963 13.1267 15.375C13.1267 14.7537 12.6231 14.25 12.0017 14.25Z"
-                                    fill="#252525" />
-                            </svg>
+                        <sgds-alert variant="success" show outlined dismissible iconName="exclamation-circle-fill" iconSize="lg">
                             <span>
                                 This is a info alert with <sgds-alert-link>an example link</sgds-alert-link>. Give it a
                                 click if you like. You may add the dismissible option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="danger" show="" outlined dismissible>
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24" fill="none">
-                                <path
-                                    d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM12 7.5C11.3977 7.5 10.927 8.02007 10.9869 8.61942L11.3815 12.5653C11.4133 12.883 11.6807 13.125 12 13.125C12.3193 13.125 12.5867 12.883 12.6185 12.5653L13.0131 8.61942C13.073 8.02007 12.6023 7.5 12 7.5ZM12.0017 14.25C11.3804 14.25 10.8767 14.7537 10.8767 15.375C10.8767 15.9963 11.3804 16.5 12.0017 16.5C12.6231 16.5 13.1267 15.9963 13.1267 15.375C13.1267 14.7537 12.6231 14.25 12.0017 14.25Z"
-                                    fill="#252525" />
-                            </svg>
+                        <sgds-alert variant="danger" show outlined dismissible iconName="exclamation-circle-fill" iconSize="lg">
                             <span>
                                 This is an outline warning alert with <sgds-alert-link>an example
                                     link</sgds-alert-link>. Give it a click if you like. You may add the dismissible
                                 option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="warning" show="" outlined dismissible>
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24" fill="none">
-                                <path
-                                    d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM12 7.5C11.3977 7.5 10.927 8.02007 10.9869 8.61942L11.3815 12.5653C11.4133 12.883 11.6807 13.125 12 13.125C12.3193 13.125 12.5867 12.883 12.6185 12.5653L13.0131 8.61942C13.073 8.02007 12.6023 7.5 12 7.5ZM12.0017 14.25C11.3804 14.25 10.8767 14.7537 10.8767 15.375C10.8767 15.9963 11.3804 16.5 12.0017 16.5C12.6231 16.5 13.1267 15.9963 13.1267 15.375C13.1267 14.7537 12.6231 14.25 12.0017 14.25Z"
-                                    fill="#252525" />
-                            </svg>
+                        <sgds-alert variant="warning" show outlined dismissible iconName="exclamation-circle-fill" iconSize="lg">
                             <span>
                                 This is an outline danger alert with <sgds-alert-link>an example link</sgds-alert-link>.
                                 Give it a click if you like. You may add the dismissible option
                             </span>
                         </sgds-alert>
-                        <sgds-alert variant="neutral" show="" outlined dismissible>
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                viewBox="0 0 24 24" fill="none">
-                                <path
-                                    d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12ZM12 7.5C11.3977 7.5 10.927 8.02007 10.9869 8.61942L11.3815 12.5653C11.4133 12.883 11.6807 13.125 12 13.125C12.3193 13.125 12.5867 12.883 12.6185 12.5653L13.0131 8.61942C13.073 8.02007 12.6023 7.5 12 7.5ZM12.0017 14.25C11.3804 14.25 10.8767 14.7537 10.8767 15.375C10.8767 15.9963 11.3804 16.5 12.0017 16.5C12.6231 16.5 13.1267 15.9963 13.1267 15.375C13.1267 14.7537 12.6231 14.25 12.0017 14.25Z"
-                                    fill="#252525" />
-                            </svg>
+                        <sgds-alert variant="neutral" show outlined dismissible iconName="exclamation-circle-fill" iconSize="lg">
                             <span>
                                 This is an outline success alert with <sgds-alert-link>an example
                                     link</sgds-alert-link>. Give it a click if you like. You may add the dismissible
