--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     <form id="datepicker-form">
         <!-- <input type="file" required name="fileuptest"/> -->
-        <sgds-file-upload required multiple hinttext="test" name="fileuploadtest" hasFeedback>File upload</sgds-file-upload>
+        <sgds-file-upload invalid invalidFeedback="test" required multiple hinttext="test" name="fileuploadtest" hasFeedback>File upload</sgds-file-upload>
       <!-- <sgds-datepicker required></sgds-datepicker> -->
         <!-- <input name="test" checked type="checkbox" indeterminate />-->
        <sgds-input label="Label" hinttext="type hello" name="email" required  pattern="hello"  hasFeedback="both" 
@@ -130,7 +130,7 @@
             </svg>" placeholder="Placeholder">
         </sgds-input> 
           <sgds-quantity-toggle  name="quant" min="1" max="2"  value="4"   hinttext="type hello" hasFeedback="both" ></sgds-quantity-toggle>
-        <sgds-checkbox-group hasFeedback hintText="hint for checkbox" > 
+        <sgds-checkbox-group hasFeedback hintText="hint for checkbox" label="checkbox"> 
         <sgds-checkbox  slot="checkbox" name="checkbox" value="checkboxhello" required >he</sgds-checkbox>
       </sgds-checkbox-group>
 
@@ -138,11 +138,11 @@
           <sgds-radio value="1">1</sgds-radio>
           <sgds-radio value="2">2 </sgds-radio>
         </sgds-radio-group>
-         <!-- <sgds-textarea required></sgds-textarea> -->
+         <sgds-textarea required hasFeedback></sgds-textarea>
         <sgds-button type="submit" id="submit">Submit</sgds-button>
-        <button type="reset">Reset</button>
+        <sgds-button type="reset" id="submit">Reset</sgds-button>
     </form>
-
+    <sgds-switch label="switch"> label</sgds-switch>
     <form>
       <input required />
       <button type="submit">Submit</button>
