fix(datepicker): failing test

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <form id="datepicker-form" novalidate>
         <!-- <input  required name="fileuptest"/> -->
         <!-- <sgds-file-upload  invalidFeedback="test" required multiple hinttext="test" name="fileuploadtest" hasFeedback>File upload</sgds-file-upload> -->
-      <!-- <sgds-datepicker required></sgds-datepicker> -->
+      <sgds-datepicker required></sgds-datepicker>
         <!-- <input name="test" checked type="checkbox" indeterminate />-->
         <!-- <sgds-input label="Label" hinttext="type hello" name="email" required  pattern="hello"  hasFeedback="both" 
             icon="<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; fill=&quot;currentColor&quot; class=&quot;bi bi-envelope&quot; viewBox=&quot;0 0 16 16&quot;>
