chore(button): replace icon with sgds icon

--- a/index.html
+++ b/index.html
@@ -894,36 +894,36 @@
                 <div class="row">
                     <div class="grid">
                         <sgds-button variant="primary">
-                            <i slot="leftIcon" class="bi bi-arrow-left"></i>
+                            <sgds-icon slot="leftIcon" name="placeholder"></sgds-icon>
                             Primary Button
                         </sgds-button>
                         <sgds-button variant="primary">
                             Primary Button
-                            <i slot="rightIcon" class="bi bi-arrow-right"></i>
+                            <sgds-icon slot="rightIcon" name="placeholder"></sgds-icon>
                         </sgds-button>
                         <sgds-button variant="outline">
-                            <i slot="leftIcon" class="bi bi-arrow-left"></i>
+                            <sgds-icon slot="leftIcon" name="placeholder"></sgds-icon>
                             Outline Button
                         </sgds-button>
                         <sgds-button variant="outline">
                             Outline Button
-                            <i slot="rightIcon" class="bi bi-arrow-right"></i>
+                            <sgds-icon slot="rightIcon" name="placeholder"></sgds-icon>
                         </sgds-button>
                         <sgds-button variant="ghost">
-                            <i slot="leftIcon" class="bi bi-arrow-left"></i>
+                            <sgds-icon slot="leftIcon" name="placeholder"></sgds-icon>
                             Ghost Button
                         </sgds-button>
                         <sgds-button variant="ghost">
                             Ghost Button
-                            <i slot="rightIcon" class="bi bi-arrow-right"></i>
+                            <sgds-icon slot="rightIcon" name="placeholder"></sgds-icon>
                         </sgds-button>
                         <sgds-button variant="danger">
-                            <i slot="leftIcon" class="bi bi-arrow-left"></i>
+                            <sgds-icon slot="leftIcon" name="placeholder"></sgds-icon>
                             Danger Button
                         </sgds-button>
                         <sgds-button variant="danger">
                             Danger Button
-                            <i slot="rightIcon" class="bi bi-arrow-right"></i>
+                            <sgds-icon slot="rightIcon" name="placeholder"></sgds-icon>
                         </sgds-button>
                     </div>
                 </div>
@@ -941,17 +941,17 @@
                     <div class="grid">
                         <sgds-button variant="primary" fullWidth>Full Width Button</sgds-button>
                         <sgds-button variant="primary" fullWidth>
-                            <i slot="leftIcon" class="bi bi-arrow-left"></i>
+                            <sgds-icon slot="leftIcon" name="placeholder"></sgds-icon>
                             Full Width Button
                         </sgds-button>
                         <sgds-button variant="primary" fullWidth>
                             Full Width Button
-                            <i slot="rightIcon" class="bi bi-arrow-right"></i>
+                            <sgds-icon slot="rightIcon" name="placeholder"></sgds-icon>
                         </sgds-button>
                         <sgds-button variant="primary" fullWidth>
-                            <i slot="leftIcon" class="bi bi-arrow-left"></i>
+                            <sgds-icon slot="leftIcon" name="placeholder"></sgds-icon>
                             Full Width Button
-                            <i slot="rightIcon" class="bi bi-arrow-right"></i>
+                            <sgds-icon slot="rightIcon" name="placeholder"></sgds-icon>
                         </sgds-button>
                     </div>
                 </div>
