--- a/index.html
+++ b/index.html
@@ -1182,61 +1182,51 @@
                 <h2>Toast</h2>
                 <div class="row">
                     <div class="col is-6">
-                        <sgds-toast  dismissable >
-                            his is a toast notifications This is a toast notifications his is a toast notifications his is a toast notifications his is a toast notifications his is a toast notifications his is a toast notifications 
+                        <sgds-toast dismissable >
+                            <sgds-icon slot="icon" name="info-circle-fill"></sgds-icon>
+                            This is a toast notifications This is a toast notifications his is a toast notifications his is a toast notifications his is a toast notifications his is a toast notifications his is a toast notifications 
                         </sgds-toast>
                         <sgds-button id="show-toast-btn">show toast</sgds-button>
                         <sgds-toast autohide id="toast-autohide">
+                            <sgds-icon slot="icon" name="info-circle-fill"></sgds-icon>
                             autohide
                         </sgds-toast>
-                        <sgds-toast show="" dismissable>
+                        <sgds-toast show dismissable>
+                            <sgds-icon slot="icon" name="info-circle-fill"></sgds-icon>
                             This is a toast notifications helklo world 
                         </sgds-toast>
-                        <sgds-toast show="" >
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
-                                <path
-                                    d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Zm.894.448C7.111 2.02 7 2.569 7 3v4a.5.5 0 0 1-.276.447l-5.448 2.724a.5.5 0 0 0-.276.447v.792l5.418-.903a.5.5 0 0 1 .575.41l.5 3a.5.5 0 0 1-.14.437L6.708 15h2.586l-.647-.646a.5.5 0 0 1-.14-.436l.5-3a.5.5 0 0 1 .576-.411L15 11.41v-.792a.5.5 0 0 0-.276-.447L9.276 7.447A.5.5 0 0 1 9 7V3c0-.432-.11-.979-.322-1.401C8.458 1.159 8.213 1 8 1c-.213 0-.458.158-.678.599Z">
-                                </path>
-                            </svg>
+                        <sgds-toast show variant="success">
+                            <sgds-icon slot="icon" name="check-circle-fill"></sgds-icon>
                             <span slot="duration">2 mins ago</span>
                             This is a toast notifications
                         </sgds-toast>
-                        <sgds-toast show="" >
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
-                                <path
-                                    d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Zm.894.448C7.111 2.02 7 2.569 7 3v4a.5.5 0 0 1-.276.447l-5.448 2.724a.5.5 0 0 0-.276.447v.792l5.418-.903a.5.5 0 0 1 .575.41l.5 3a.5.5 0 0 1-.14.437L6.708 15h2.586l-.647-.646a.5.5 0 0 1-.14-.436l.5-3a.5.5 0 0 1 .576-.411L15 11.41v-.792a.5.5 0 0 0-.276-.447L9.276 7.447A.5.5 0 0 1 9 7V3c0-.432-.11-.979-.322-1.401C8.458 1.159 8.213 1 8 1c-.213 0-.458.158-.678.599Z">
-                                </path>
-                            </svg>
+                        <sgds-toast show variant="danger">
+                            <sgds-icon slot="icon" name="exclamation-circle-fill"></sgds-icon>
                             <sgds-link slot="action" href="#" target="_blank">Action</sgds-link>
                             This is a toast notifications
                         </sgds-toast>
-                        <sgds-toast show=""  dismissable >
-                            <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
-                                <path
-                                    d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Zm.894.448C7.111 2.02 7 2.569 7 3v4a.5.5 0 0 1-.276.447l-5.448 2.724a.5.5 0 0 0-.276.447v.792l5.418-.903a.5.5 0 0 1 .575.41l.5 3a.5.5 0 0 1-.14.437L6.708 15h2.586l-.647-.646a.5.5 0 0 1-.14-.436l.5-3a.5.5 0 0 1 .576-.411L15 11.41v-.792a.5.5 0 0 0-.276-.447L9.276 7.447A.5.5 0 0 1 9 7V3c0-.432-.11-.979-.322-1.401C8.458 1.159 8.213 1 8 1c-.213 0-.458.158-.678.599Z">
-                                </path>
-                            </svg>
+                        <sgds-toast show dismissable variant="warning">
+                            <sgds-icon slot="icon" name="exclamation-triangle-fill"></sgds-icon>
+                            <span slot="action">Action</span>
+                            This is a toast notifications
+                        </sgds-toast>
+                        <sgds-toast show dismissable variant="neutral">
+                            <sgds-icon slot="icon" name="info-circle-fill"></sgds-icon>
                             <span slot="action">Action</span>
                             This is a toast notifications
                         </sgds-toast>
                         <sgds-toast-container position="bottom-start">
-                            <sgds-toast show>
-                                <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                    fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
-                                    <path
-                                        d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Zm.894.448C7.111 2.02 7 2.569 7 3v4a.5.5 0 0 1-.276.447l-5.448 2.724a.5.5 0 0 0-.276.447v.792l5.418-.903a.5.5 0 0 1 .575.41l.5 3a.5.5 0 0 1-.14.437L6.708 15h2.586l-.647-.646a.5.5 0 0 1-.14-.436l.5-3a.5.5 0 0 1 .576-.411L15 11.41v-.792a.5.5 0 0 0-.276-.447L9.276 7.447A.5.5 0 0 1 9 7V3c0-.432-.11-.979-.322-1.401C8.458 1.159 8.213 1 8 1c-.213 0-.458.158-.678.599Z" />
-                                </svg>
+                            <sgds-toast show dismissible>
+                                <sgds-icon slot="icon" name="info-circle-fill"></sgds-icon>
+                                <sgds-link slot="action" href="#" target="_blank">Action</sgds-link>
+                                This is a toast notifications
                             </sgds-toast>
-                            <sgds-toast show bg="warning" status="success"></sgds-toast>
+                            <sgds-toast show dismissible variant="warning">
+                                <sgds-icon slot="icon" name="exclamation-triangle-fill"></sgds-icon>
+                                <sgds-link slot="action" href="#" target="_blank">Action</sgds-link>
+                                This is a toast notifications
+                            </sgds-toast>
                         </sgds-toast-container>
-                        <!-- <sgds-toast-container position="top-center">
-                            <sgds-toast show title="hello">This is a toast <span slot="duration">just
-                                    now</span></sgds-toast>
-                            <sgds-toast show title="hello">This is a toast</sgds-toast>
-                        </sgds-toast-container> -->
                     </div>
                 </div>
             </div>
